# High-frequency-trading-system

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  maCli  relation.puml
config/: api_config.ini  config.rqClient
include/: MaThirdParty.h  constant.h  kbss_encrypt.h  maCliApi.h  maMktData.h
include/c++/: maCliCosTradeApi.h  maCliCosTradeApiStruct.h  maCliFislTradeApi.h  maCliFislTradeApiStruct.h  maCliFutureTradeApiStruct.h  maCliMktData.h  maCliOptTradeApi.h  maCliOptTradeApiStruct.h  maCliStkTradeApi.h  maCliStkTradeApiStruct.h  maCliTradeApi.h
include/eqapiinclude/: eqapi.h  quotedata.h  quotesdbtype.h
src/: main.cpp
src/EventQueue/: EventQueue.cpp  EventQueue.h  QueueTest.h
src/eqapi/: demo_rq.cpp
src/excel/: xlETF下单20250722.xlsx  ~$xlETF下单20250722.xlsx
src/macli/: Event.cpp  Event.h  Mutex.h  MyFuncs.cpp  MyFuncs.h  database.cpp  database.h  global.cpp  global.h  iniFileRW.cpp  iniFileRW.h  logger.cpp  logger.h  maBpuStkReq.cpp  maBpuStkReq.h  maBpuStkRsp.h  maBpuTradeApiTest.h  maBpuTradeDefine.h  maBpuTradeGlobal.cpp  maBpuTradeGlobal.h  maBpuTradeUtil.cpp  maBpuTradeUtil.h
src/market/: MarketDataManager.cpp  MarketDataManager.h
src/strategies/: position.cpp  position.h  strategy_non_linear.cpp  strategy_non_linear.h  strategy_template.cpp  strategy_template.h
